Fix legacy styeles add overflow

--- a/src/components/PCInfo/style.module.scss
+++ b/src/components/PCInfo/style.module.scss
@@ -8,8 +8,11 @@
 
 .container {
   display: flex;
-  gap: 16px;
   flex-direction: column;
+}
+
+.container > *:last-child {
+  margin-top: 16px;
 }
 
 .center {
